fixed score text displays

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     </div>
 
                     <div class="row justify-content-center mx-3">
-                        <h2 class="score px-2 pb-1">Score : <span class="scorevalue"></span></h2>
+                        <h2 class="score px-2 pb-1">Click on a gem to begin!</h2>
                     </div>
     
                     <div class="row justify-content-center mt-5">             
