--- a/index.html
+++ b/index.html
@@ -77,6 +77,12 @@
             
         </div>
 
+        <footer class="footer fixed-bottom" id="footer">
+            <p class="copyright text-center pt-2">
+                Copyright &copy; 2018
+            </p>
+        </footer>
+
         <script type="text/javascript" src="assets/javascript/game.js"></script>
 
     </body>
