--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
 
     <body>
 
+        <audio id="ping" preload src="assets/audio/ping.m4a"></audio>
+        <audio id="winning" preload src="assets/audio/winning.mp3"></audio>
+        <audio id="elephant" preload src="assets/audio/elephant.mp3"></audio>
+
         <div class="container">
             <div class="row name p-3 mt-3 mx-5 mb-5">
                 Gems are Truly Outrageous: Collecting Game
